--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ vendor
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+server/.idea/misc.xml
+server/.idea/misc.xml
+server/.idea/misc.xml
+server/.idea/misc.xml
+server/.idea/modules.xml
+server/.idea/server.iml
+server/.idea/vcs.xml
