--- a/.gitignore
+++ b/.gitignore
@@ -21,13 +21,9 @@
 node_modules/
 vendor
 
+# JetBrains
+server/.idea/*
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-server/.idea/misc.xml
-server/.idea/misc.xml
-server/.idea/misc.xml
-server/.idea/misc.xml
-server/.idea/modules.xml
-server/.idea/server.iml
-server/.idea/vcs.xml
