--- a/server/Gopkg.toml
+++ b/server/Gopkg.toml
@@ -32,3 +32,7 @@
 [[constraint]]
   name = "go.mongodb.org/mongo-driver"
   version = "~1.1.0"
+
+[[constraint]]
+  name = "github.com/google/uuid"
+  version = "1.1.1"
