Fixing issue with the wrapper script for e2e. Apparently 'go run' creates a short term process that spawns the built one... which meant that node couldn't find the real one in order to kill it. It was a hot mess.

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
     "cypress": "^3.4.1",
+    "tree-kill": "^1.2.1",
     "uuid": "^3.3.3"
+  },
+  "scripts": {
+    "e2e": "node run.js"
   }
 }
