--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,10 @@ jobs:
       - checkout
       - run: cd server; dep ensure
       - run: go test ./server/test
+      - run: cd client; yarn;
+orbs:
+  node: circleci/node@1.1.6
+
 workflows:
   version: 2
   build_and_test:
