--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,40 @@
-version: 2
+version: 2.1
+orbs:
+  node: circleci/node@1.1.6
 jobs:
   build:
     docker:
       - image: circleci/golang:1.9.7
+        user: root
       - image: mongo:latest
     working_directory: /go/src/duty-designator
     steps:
       - checkout
+      - run: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+      - run: echo "deb http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list
+      - run: apt-get update
+      - run: |
+          apt-get install -y dbus-x11 google-chrome-stable libgtk2.0-0 \
+          libnotify-dev \
+          libgconf-2-4 \
+          libnss3 \
+          libxss1 \
+          libasound2 \
+          xvfb
+      - run: rm -rf /var/lib/apt/lists/*
+      - restore_cache:
+          keys:
+            - cache-{{ arch }}-{{ .Branch }}-{{ checksum "./e2e/package.json" }}
       - run: cd server; dep ensure
       - run: go test ./server/test
+      - node/install-node
+      - node/install-yarn
+      - run: cd client; yarn
+      - run: cd e2e; yarn; yarn e2e
+      - save_cache:
+          key: cache-{{ arch }}-{{ .Branch }}-{{ checksum "./e2e/package.json" }}
+          paths:
+            - ~/.cache
 workflows:
   version: 2
   build_and_test:
