Do yarn e2e on own line in config.yml with working_directory specified
Signed-off-by: Seamus Riordan <seamus.riordan@accenture.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,9 @@ jobs:
       - node/install-yarn
       - run: cd client; yarn
       - run: cd e2e; yarn
-      - run: yarn e2e
+      - run:
+        - working_directory: e2e/
+        - command: yarn e2e
       - save_cache:
           key: cache-{{ arch }}-{{ .Branch }}-{{ checksum "./e2e/package.json" }}
           paths:
