--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,7 @@ jobs:
       - node/install-yarn
       - run: cd client && yarn
       - run: cd e2e && yarn
-      - run:
-        working_directory: e2e/
-        command: yarn e2e
+      - run: cd e2e && yarn e2e
       - save_cache:
           key: cache-{{ arch }}-{{ .Branch }}-{{ checksum "./e2e/package.json" }}
           paths:
