--- a/e2e/package.json
+++ b/e2e/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cypress": "^3.4.1",
+    "mocha": "^6.2.1",
     "mocha-junit-reporter": "^1.23.1",
     "tree-kill": "^1.2.1",
     "uuid": "^3.3.3"
