xmllint debian package is libxml2-utils
Signed-off-by: Seamus Riordan <seamus.riordan@accenture.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           libxss1 \
           libasound2 \
           xvfb \
-          xmllint
+          libxml2-utils
       - run: rm -rf /var/lib/apt/lists/*
       - restore_cache:
           keys:
