--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.3",
+    "@mdi/js": "^4.4.95",
+    "@mdi/react": "^1.2.1",
     "abortcontroller-polyfill": "^1.3.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
