--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@mdi/js": "^4.4.95",
     "@mdi/react": "^1.2.1",
     "abortcontroller-polyfill": "^1.3.0",
+    "date-fns": "^2.4.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
