Added standard test and check tasks to client and server projects

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -24,3 +24,13 @@ dependencies {
 goBuild {
     outputLocation = './.gogradle/server'
 }
+
+tasks {
+    task("check") {
+        dependsOn goCheck
+    }
+    
+    task("test") {
+        dependsOn goTest
+    }
+}
