--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@mdi/react": "^1.2.1",
     "abortcontroller-polyfill": "^1.3.0",
     "date-fns": "^2.4.1",
+    "jest-junit": "^8.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
@@ -16,8 +17,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --reporters jest-junit",
     "eject": "react-scripts eject"
+  },
+  "jest-junit": {
+    "outputDirectory": "./test-reports",
+    "outputName": "junit.xml"
   },
   "eslintConfig": {
     "extends": "react-app"
