--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,11 +40,19 @@ jobs:
           key: cache-{{ arch }}-{{ .Branch }}-{{ checksum "./e2e/package.json" }}
           paths:
             - ~/.cache
-      - run: cp -r /go/src/duty-designator/server/.gogradle/reports artifacts/serverReports/
-      - run: cp -r e2e/videos artifacts/e2e/
-      - run: cp -r e2e/screenshots artifacts/e2e/
-      - run: cp -r client/test-reports results/client
-      - run: cp -r e2e/results results/e2e
+      - run: |
+          mkdir artifacts
+          mkdir artifacts/serverReports
+          mkdir artifacts/e2e
+          cp -r /go/src/duty-designator/server/.gogradle/reports artifacts/serverReports/
+          cp -r e2e/videos artifacts/e2e/
+          cp -r e2e/screenshots artifacts/e2e/
+      - run: |
+          mkdir results
+          mkdir results/client
+          mkdir results/e2e
+          cp -r client/test-reports results/client
+          cp -r e2e/results results/e2e
       - store_artifacts:
           path: artifacts
       - store_test_results:
