--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,8 @@ jobs:
           mkdir artifacts
           mkdir artifacts/serverReports
           mkdir artifacts/e2e
+          mkdir artifacts/e2e/screenshots
+          mkdir artifacts/e2e/videos
           cp -r /go/src/duty-designator/server/.gogradle/reports artifacts/serverReports/
           cp -r e2e/videos artifacts/e2e/
           cp -r e2e/screenshots artifacts/e2e/
