--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,11 +46,11 @@ jobs:
           mkdir artifacts/e2e
           mkdir artifacts/e2e/screenshots
           mkdir artifacts/e2e/videos
-          mkdir e2e/videos
-          mkdir e2e/screenshots
+          mkdir e2e/cypress/videos
+          mkdir e2e/cypress/screenshots
           cp -r /go/src/duty-designator/server/.gogradle/reports artifacts/serverReports/
-          cp -r e2e/videos artifacts/e2e/
-          cp -r e2e/screenshots artifacts/e2e/
+          cp -r e2e/cypress/videos artifacts/e2e/
+          cp -r e2e/cypress/screenshots artifacts/e2e/
       - run: |
           mkdir results
           mkdir results/client
