--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
           mkdir -p artifacts/e2e/videos
           mkdir -p e2e/cypress/videos
           mkdir -p e2e/cypress/screenshots
-          cp results artifacts/
+          cp -r results artifacts/
           cp -r /go/src/duty-designator/server/.gogradle/reports artifacts/serverReports/
           cp -r e2e/cypress/videos artifacts/e2e/
           cp -r e2e/cypress/screenshots artifacts/e2e/
