--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --reporters jest-junit",
+    "test": "react-scripts test --reporters default --reporters jest-junit",
     "eject": "react-scripts eject"
   },
   "jest-junit": {
