styling changes and such
Signed-off-by: Robert Murdock <robert.f.murdock@accenture.com>

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "duty-designator",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.2",
