Adding a start command to avoid the 'oops i didn't build the client' problem
Signed-off-by: Robert Murdock <robert.f.murdock@accenture.com>

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -43,4 +43,8 @@ tasks {
         dependsOn goClean
     }
 
+    task start(type: Exec) {
+        dependsOn build, ":client:build"
+        commandLine("./.gogradle/server")
+    }
 }
