Looks like there might be a task ordering issue on ci

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -25,6 +25,8 @@ tasks {
         dependsOn goCheck
     }
 
+    goTest.dependsOn ":client:build"
+    
     task("test") {
         dependsOn goTest
     }
