--- a/e2e/package.json
+++ b/e2e/package.json
@@ -2,6 +2,7 @@
   "license": "MIT",
   "dependencies": {
     "cypress": "^3.4.1",
+    "date-fns": "^2.6.0",
     "mocha": "^6.2.1",
     "mocha-junit-reporter": "^1.23.1",
     "tree-kill": "^1.2.1",
