Add in dockerhub image docker-compose
Signed-off-by: Natalie Frecka <natalie.frecka@accenture.com>

--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   duty-designator:
-    image: riordanx0/duty-designator:latest
+    build: .
     ports:
       - "8080:8080"
 
